--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,11 @@ FTLE_Matlab/ER3BP/Figure/Figure*
 FTLE_Matlab/ER3BP/Figure/Video
 # FTLE_Matlab/Compilation/Test\ for\ compilation
 FTLE_Matlab/Compilation/
+FTLE_Matlab/CPU/FTLE/Masdemont/Masdemont_n100_tol1e-6.fig
+FTLE_Matlab/CPU/IntegratorC++/300.fig
 
 Tracers/*.fig
-
-# Executables
-*bin/
+Tracers/*.mat
 
 # Data file
 ris_int*
@@ -22,17 +22,15 @@ Results/
 *figs/
 data_for_the_history/
 tracers.txt
-ftle_ell_mu=*
-data[23]d_mu=*
-DATA[23]d_*
-tracers_mu=*
+
+# Executables
+*bin/
 
 # CodeBlocks specific files
 *.depend
 *.layout
 *.cbTemp
 *.ilk
-#*.obj
 *.pdb
 obj/
 
@@ -41,10 +39,6 @@ obj/
 #Tutorial/*.log
 #Tutorial/*.aux
 #Tutorial/*.out
-
-# Track these
-!CUDA/FTLE_CUDA/FTLE_CUDA.cbp
-!FTLE_CPU/FTLE_CPU.cbp
 
 # Latex
 *.log
