--- a/FTLE_nu_v/FTLE_nu_v.cbp
+++ b/FTLE_nu_v/FTLE_nu_v.cbp
@@ -16,9 +16,9 @@
 					<Add directory="C:/C++ libraries/boost_1_53_0" />
 				</Compiler>
 			</Target>
-			<Target title="Release">
-				<Option output="bin/Release/FTLE_nu_v" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj/Release/" />
+			<Target title="Linux">
+				<Option output="bin/Linux/FTLE_nu_v" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Linux/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
