added linker libs for linux

--- a/FTLE_nu_v/FTLE_nu_v.cbp
+++ b/FTLE_nu_v/FTLE_nu_v.cbp
@@ -26,6 +26,9 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lgsl" />
+					<Add option="-lm" />
+					<Add option="-lgslcblas" />
 				</Linker>
 			</Target>
 		</Build>
